Closed Bug 1563728 Opened 6 years ago Closed 6 years ago

Throw when the three parameters of BiquadFilterNode.getFrequencyResponse aren't of the same size

Categories

(Core :: Web Audio, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: padenot, Assigned: padenot)

Details

Attachments

(1 file)

Pushed by padenot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/689170eda327 Throw when the three parameters of BiquadFilterNode.getFrequencyResponse aren't of the same size. r=baku
Pushed by emilio@crisal.io: https://hg.mozilla.org/integration/autoland/rev/bb29c8eeb41c Add a return statement to BiquadFilterNode::GetFrequencyResponse to fix bustage. rs=padenot
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: