Bug 1563728 - Add a return statement to BiquadFilterNode::GetFrequencyResponse to fix bustage. rs=padenot

CLOSED TREE