dom/media/webaudio/BiquadFilterNode.cpp
@@ -311,6 +311,7 @@ void BiquadFilterNode::GetFrequencyResponse(const Float32Array& aFrequencyHz,
   if (!(aFrequencyHz.Length() == aMagResponse.Length() &&
         aMagResponse.Length() == aPhaseResponse.Length())) {
     aRv.Throw(NS_ERROR_DOM_INVALID_ACCESS_ERR);
+    return;
   }
 
   uint32_t length = aFrequencyHz.Length();
